--- a/step-01/src/index.tpl.html
+++ b/step-01/src/index.tpl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
   <!--
       描述：head中无需再引入css以及facicon，
       webpack将根据入口JS文件的要求自动实现按需加载或者生成style标签
